chore: correciones minimas en la capa Mapper [Marcos]